++ add controller to update migration configuration in kvvmi status
