# images/virtualization-artifact/cmd/virtualization-controller/main.go
@@ -41,6 +41,7 @@ import (
 	appconfig "github.com/deckhouse/virtualization-controller/pkg/config"
 	"github.com/deckhouse/virtualization-controller/pkg/controller/cvi"
 	"github.com/deckhouse/virtualization-controller/pkg/controller/indexer"
+	"github.com/deckhouse/virtualization-controller/pkg/controller/livemigration"
 	mc "github.com/deckhouse/virtualization-controller/pkg/controller/moduleconfig"
 	mcapi "github.com/deckhouse/virtualization-controller/pkg/controller/moduleconfig/api"
 	"github.com/deckhouse/virtualization-controller/pkg/controller/vd"
@@ -147,6 +148,12 @@ func main() {
 	}
 
 	gcSettings, err := appconfig.LoadGcSettings()
+	if err != nil {
+		log.Error(err.Error())
+		os.Exit(1)
+	}
+
+	liveMigrationSettings, err := appconfig.LoadLiveMigrationSettings()
 	if err != nil {
 		log.Error(err.Error())
 		os.Exit(1)
@@ -329,6 +336,12 @@ func main() {
 		os.Exit(1)
 	}
 	if err = vmop.SetupGC(mgr, vmopLogger, gcSettings.VMOP); err != nil {
+		log.Error(err.Error())
+		os.Exit(1)
+	}
+
+	liveMigrationLogger := logger.NewControllerLogger(livemigration.ControllerName, logLevel, logOutput, logDebugVerbosity, logDebugControllerList)
+	if err = livemigration.NewController(ctx, mgr, liveMigrationLogger, liveMigrationSettings); err != nil {
 		log.Error(err.Error())
 		os.Exit(1)
 	}
